test/studies/hpcc/RA/bradc/ra-bradc-duplicateErrors.good
ra-bradc-duplicateErrors.chpl:39: In function 'VerifyResults':
ra-bradc-duplicateErrors.chpl:49: error: 'numErrors' undeclared (first use this function)
